--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         p.subtitle { color: var(--text-sec); font-size: 0.95rem; margin-top: 8px; }
         .header-emoji { font-size: 1.5rem; vertical-align: middle; margin-right: 10px; }
 
+        /* Filter Section */
         .filter-container {
             background-color: #181818;
             padding: 20px;
@@ -53,7 +54,7 @@
         .filter-group {
             margin-bottom: 15px;
             display: flex;
-            align-items: flex-start;
+            align-items: flex-start; /* 改为顶部对齐，适应搜索框 */
             gap: 15px;
             border-bottom: 1px dashed #333;
             padding-bottom: 10px;
@@ -65,10 +66,28 @@
             color: var(--highlight);
             min-width: 60px;
             font-size: 0.95rem;
-            margin-top: 5px;
+            margin-top: 8px; /* 微调对齐 */
         }
 
-        .filter-options { display: flex; flex-wrap: wrap; gap: 8px; flex: 1; }
+        .filter-options { display: flex; flex-wrap: wrap; gap: 8px; flex: 1; align-items: center; }
+
+        /* --- 新增：搜索框样式 --- */
+        .search-input {
+            background-color: #333;
+            border: 1px solid #444;
+            color: #fff;
+            padding: 8px 12px;
+            border-radius: 6px;
+            width: 100%;
+            max-width: 300px;
+            font-size: 0.95rem;
+            transition: border-color 0.2s;
+        }
+        .search-input:focus {
+            outline: none;
+            border-color: var(--accent);
+            background-color: #2a2a2a;
+        }
 
         .check-btn { display: none; }
         .check-label {
@@ -212,29 +231,34 @@
         .ingredient-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(120px, 1fr)); gap: 10px; }
         .ing-item { background: #333; padding: 8px; border-radius: 4px; font-size: 0.9rem; text-align: center; border: 1px solid #444; }
 
-        .step-item { margin-bottom: 15px; color: #ddd; font-size: 1rem; display: flex; }
-        .step-num {
-            min-width: 24px; height: 24px; background: var(--accent); color: #000;
-            border-radius: 50%; text-align: center; line-height: 24px; font-weight: bold;
-            font-size: 0.8rem; margin-right: 10px; margin-top: 2px;
-        }
+        /* 步骤样式保留但隐藏，如果未来想加回可以恢复 */
+        /* .step-item { ... } */
 
         .modal-actions {
             padding: 20px; background-color: #181818; border-top: 1px solid #333; display: flex; gap: 15px;
         }
         .btn-full { flex: 1; }
         .btn-close { background-color: #333; color: white; }
-        .btn-cook { background-color: var(--accent); color: #121212; }
+        .btn-cook { background-color: #FF0000; color: #fff; } /* YouTube Red */
+        .btn-cook:hover { background-color: #cc0000; }
     </style>
 </head>
 <body>
 
 <header>
-    <h1><span class="header-emoji">🍳</span>今天吃什么 v2.1</h1>
-    <p class="subtitle">私房菜谱库 | 数据已分离</p>
+    <h1><span class="header-emoji">🍳</span>今天吃什么</h1>
+    <p class="subtitle">私房菜谱库 | 支持搜索 & YouTube</p>
 </header>
 
 <div class="filter-container">
+    
+    <div class="filter-group">
+        <span class="filter-label">搜索:</span>
+        <div class="filter-options">
+            <input type="text" id="searchInput" placeholder="🔍 输入菜名或食材..." class="search-input" oninput="applyFilters()">
+        </div>
+    </div>
+
     <div class="filter-group">
         <span class="filter-label">菜系:</span>
         <div class="filter-options" id="filter-cuisine"></div>
@@ -293,12 +317,10 @@
             <div style="color:#ccc; line-height:1.5;" id="modalDesc"></div>
             <div class="section-title">🛒 食材清单</div>
             <div class="ingredient-grid" id="modalIngredients"></div>
-            <div class="section-title">🍳 烹饪步骤</div>
-            <div id="modalSteps"></div>
-        </div>
+            </div>
         <div class="modal-actions">
             <button class="btn-full btn-close" onclick="closeModal()">关闭</button>
-            <button class="btn-full btn-cook" id="btnSearch">🎬 搜视频教程</button>
+            <button class="btn-full btn-cook" id="btnSearch">📺 YouTube 教程</button>
         </div>
     </div>
 </div>
@@ -309,7 +331,6 @@
     let currentList = [];
 
     window.onload = () => {
-        // 检查 recipes.js 是否加载成功
         if (typeof allRecipes === 'undefined') {
             document.getElementById('statusBar').innerText = "错误：找不到 recipes.js 文件，请确保它和 index.html 在同一目录！";
             return;
@@ -347,12 +368,21 @@
     }
 
     function applyFilters() {
+        // 1. 获取输入框的值 (转小写，去空格)
+        const searchText = document.getElementById('searchInput').value.toLowerCase().trim();
+
+        // 2. 获取Checkbox的值
         const selCuisines = getSelectedValues('cuisine');
         const selBloggers = getSelectedValues('blogger');
         const selIngredients = getSelectedValues('ingredient');
         const selTags = getSelectedValues('tag');
 
         currentList = allRecipes.filter(item => {
+            // 文本搜索匹配 (匹配菜名 或 食材)
+            const textMatch = !searchText || 
+                              item.name.toLowerCase().includes(searchText) || 
+                              item.ingredients.toLowerCase().includes(searchText);
+
             const cuisineMatch = selCuisines.length === 0 || selCuisines.includes(item.cuisine);
             const bloggerMatch = selBloggers.length === 0 || selBloggers.includes(item.blogger);
             const ingMatch = selIngredients.length === 0 || selIngredients.some(ing => item.ingredients.includes(ing));
@@ -361,7 +391,8 @@
                 const inType = item.type && item.type.includes(t);
                 return inTags || inType;
             });
-            return cuisineMatch && bloggerMatch && ingMatch && tagMatch;
+
+            return textMatch && cuisineMatch && bloggerMatch && ingMatch && tagMatch;
         });
 
         document.getElementById('statusBar').innerText = `😋 找到 ${currentList.length} 道符合口味的菜`;
@@ -373,7 +404,7 @@
         grid.innerHTML = "";
 
         if (list.length === 0) {
-            grid.innerHTML = `<div style="grid-column:1/-1; text-align:center; padding:40px; color:#666;"><h3>👻 哎呀，没找到...</h3><p>尝试减少一些筛选条件？</p></div>`;
+            grid.innerHTML = `<div style="grid-column:1/-1; text-align:center; padding:40px; color:#666;"><h3>👻 哎呀，没找到...</h3><p>试试换个关键词或减少筛选条件？</p></div>`;
             return;
         }
 
@@ -421,27 +452,23 @@
             }
         });
 
-        const stepBox = document.getElementById('modalSteps');
-        stepBox.innerHTML = '';
-        const steps = item.steps.split('\n');
-        steps.forEach((step, idx) => {
-            if(step.trim()) {
-                const div = document.createElement('div');
-                div.className = 'step-item';
-                div.innerHTML = `<div class="step-num">${idx+1}</div><div>${step.replace(/^\d+\./, '').trim()}</div>`;
-                stepBox.appendChild(div);
-            }
-        });
+        // 已移除步骤渲染逻辑
 
         document.getElementById('btnSearch').onclick = () => {
-            window.open(`https://www.bilibili.com/search?keyword=${encodeURIComponent(item.name + ' ' + item.blogger)}`, '_blank');
+            // 切换为 YouTube 搜索
+            const query = `${item.name} ${item.blogger} recipe`;
+            window.open(`https://www.youtube.com/results?search_query=${encodeURIComponent(query)}`, '_blank');
         };
 
         modal.style.display = 'flex';
     }
 
     function closeModal() { document.getElementById('modal').style.display = 'none'; }
-    function resetFilters() { document.querySelectorAll('input[type="checkbox"]').forEach(cb => cb.checked = false); applyFilters(); }
+    function resetFilters() { 
+        document.querySelectorAll('input[type="checkbox"]').forEach(cb => cb.checked = false); 
+        document.getElementById('searchInput').value = ""; // 重置搜索框
+        applyFilters(); 
+    }
     function helpMeChoose() {
         if(currentList.length === 0) { alert('列表为空，无法随机'); return; }
         const r = currentList[Math.floor(Math.random() * currentList.length)];
