--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
     </div>
 </div>
 
-<script src="recipes.js"></script>
+<script src="recipes2.js"></script>
 
 <script>
     let currentList = [];
