--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>今天吃什么 - 智能菜谱库</title>
+    <title>今天吃什么</title>
     <style>
         :root {
             --bg-color: #121212;
@@ -288,7 +288,7 @@
 
 <header>
     <h1><span class="header-emoji">🍳</span>今天吃什么</h1>
-    <p class="subtitle">私房菜谱库 | 支持搜索 & YouTube</p>
+    <p class="subtitle">UP主菜谱引导系统</p>
     
     <div class="header-actions">
         <button class="btn-text" onclick="shareToFriends()">📤 分享给朋友</button>
