--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>悉尼今天吃什么</title>
+    <title>今天吃什么</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
     <style>
         :root {
@@ -188,7 +188,7 @@
     let currentList = [];
     
     // --- 分页相关变量 ---
-    const ITEMS_PER_PAGE = 96; // 这里修改每页显示的个数
+    const ITEMS_PER_PAGE = 48; // 这里修改每页显示的个数
     let currentPage = 1;
 
     window.onload = () => {
