--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 <body>
 
 <header>
-    <h1><span class="header-emoji">🍳</span>悉尼今天吃什么</h1>
-    <p class="subtitle">SYDNEY FOOD FINDER</p>
+    <h1><span class="header-emoji">🍳</span>今天吃什么</h1>
+    <p class="subtitle">做饭区UP主导航</p>
 </header>
 
 <div class="filter-container">
